--- a/index.html
+++ b/index.html
@@ -24,14 +24,41 @@ const root = document.querySelector('#root')
 
 const Home = () => {
     return(
-        <h1>Home</h1>
+        <div>
+        <h2>Home</h2>
+        </div>
     )
 }
 
-const Product = ({products}) => {
-    return(
 
-        <h1>{products}</h1>
+const Product = ({products, offerings, companies}) => {
+    function getProductInfo(product){
+        const targetOfferings = (offerings.filter(offering => (offering.productId === product.id)));
+        const targetOfferingsPrice = targetOfferings.map(offering => offering.price);
+        const offeringsCount = targetOfferings.length;
+        const averagePrice = targetOfferingsPrice.reduce((acc,cur) => cur+=acc)/offeringsCount
+        const minPrice = Math.min(...targetOfferingsPrice)
+        const targetCompanyId = targetOfferings.find(offering => offering.price === minPrice).companyId
+        const targetCompany = companies.find(company => (company.id === targetCompanyId)).name
+        console.log(targetCompany)
+        return {averagePrice, minPrice, targetCompany}
+    }
+
+    return(
+        <div>
+            <h2>Products</h2>
+            <ul>
+                {products.map(product =>
+                    <li>
+                        <div><span>Product:</span> {product.name}</div>
+                        <div><span>Suggested Price:</span> ${product.suggestedPrice.toFixed(2)}</div>
+                        <div><span>Average Price:</span> ${getProductInfo(product).averagePrice}</div>
+                        <div><span>Lowest Price:</span> ${getProductInfo(product).minPrice} offered by: {getProductInfo(product).targetCompany}</div>
+                    </li>
+                    )}
+            </ul>
+        </div>
+
     )
 }
 
@@ -39,30 +66,32 @@ class App extends Component{
     constructor(){
         super();
         this.state = {
-            products: []
+            products: [],
+            offerings: [],
+            companies: []
         };
     }
 
-    ComponentDidMount(){
+    componentDidMount(){
         const url = 'https://acme-users-api-rev.herokuapp.com/api';
-        axios.get(`${url}/products`)
-        .then((response)=>{
-            console.log({response});
-        })
-        // axios.all([
-        //     axios.get(`${url}/products`),
-        //     axios.get(`${url}/offerings`)
-        // ]).then(
-        //     axios.spread((products, offerings) => {
-        //         this.setState({
-        //             products: products.data,
-        //             offerings: offerings.data
-        //         })
-        //     })
-        // )
+
+        axios.all([
+            axios.get(`${url}/products`),
+            axios.get(`${url}/offerings`),
+            axios.get(`${url}/companies`)
+        ]).then(
+            axios.spread((products, offerings, companies) => {
+                this.setState({
+                    products: products.data,
+                    offerings: offerings.data,
+                    companies: companies.data
+                })
+            })
+        )
     }
 
     render(){
+        const { products, offerings, companies} = this.state
         return(
             <HashRouter>
                 <nav>
@@ -74,12 +103,12 @@ class App extends Component{
                 </nav>
                 <Switch>
                     <Route path='/home' render = { () => <Home /> } />
-                    <Route path='/products' render = { () => <Product /> } />
+                    <Route path='/products' render = { () => <Product products = {products} offerings = {offerings} companies = {companies} /> } />
                     <Redirect to="/home" />
                 </Switch>
             </HashRouter>
         )
-    } 
+    }
 }
 render( <App />, root );
 </script>
